Publish documentation for org.meltsan:aml-docs:1.0.0

--- a/index.html
+++ b/index.html
@@ -204,6 +204,30 @@ My first Python Tutorial, if you find a error or you have a suggestion to improv
 <p>Setup a project with Pyscaffold</p>
 </td>
 </tr>
+<tr>
+<td class="hdlist1">
+<a href="poo.html#poo">POO</a> 
+</td>
+<td class="hdlist2">
+<p>POO with python</p>
+</td>
+</tr>
+<tr>
+<td class="hdlist1">
+<a href="flask.html#flask">Flask</a> 
+</td>
+<td class="hdlist2">
+<p>Expose your data with an API with Flask</p>
+</td>
+</tr>
+<tr>
+<td class="hdlist1">
+<a href="marshmallow.html#marshmallow">Marshmallow</a> 
+</td>
+<td class="hdlist2">
+<p>Serialize and Deserialize your objects</p>
+</td>
+</tr>
 </table>
 </div>
 </div>
@@ -212,7 +236,7 @@ My first Python Tutorial, if you find a error or you have a suggestion to improv
 <div id="footer">
 <div id="footer-text">
 Version 1.0.0<br>
-Last updated 2020-11-24 20:28:38 -0600
+Last updated 2020-11-29 23:05:32 -0600
 </div>
 </div>
 <link rel="stylesheet" href="assets/js/highlight/styles/googlecode.min.css">
