Publish documentation for org.meltsan:aml-docs:1.0.0

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ $(globalSwitch);
 <i class="fa icon-tip" title="Tip"></i>
 </td>
 <td class="content">
-My first Python Tutorial, if you find a error or you have a suggestion to improve this documentation feel free to open a issue or clone this repository and send me a Pull Request with your change
+My first Python Tutorial, if you find an error or you have a suggestion to improve this documentation feel free to open a issue or clone this repository and send me a Pull Request with your change
 </td>
 </tr>
 </table>
@@ -236,7 +236,7 @@ My first Python Tutorial, if you find a error or you have a suggestion to improv
 <div id="footer">
 <div id="footer-text">
 Version 1.0.0<br>
-Last updated 2020-11-29 23:05:32 -0600
+Last updated 2020-11-29 23:15:58 -0600
 </div>
 </div>
 <link rel="stylesheet" href="assets/js/highlight/styles/googlecode.min.css">
