--- a/python.html
+++ b/python.html
@@ -156,81 +156,40 @@ $(globalSwitch);
 </script>
 
 </head>
-<body class="book">
+<body id="python" class="book toc2 toc-left">
 <div id="header">
 <h1>Python</h1>
 <div class="details">
 <span id="revnumber">version 1.0.0</span>
 </div>
+<div id="toc" class="toc2">
+<div id="toctitle">Table of Contents</div>
+<ul class="sectlevel1">
+<li><a href="#what-is-python">1. What is Python?</a></li>
+<li><a href="#pip">2. PIP</a></li>
+</ul>
+</div>
 </div>
 <div id="content">
-<div id="preamble">
+<div class="sect1">
+<h2 id="what-is-python"><a class="anchor" href="#what-is-python"></a>1. What is Python?</h2>
 <div class="sectionbody">
-<div class="admonitionblock tip">
-<table>
-<tr>
-<td class="icon">
-<i class="fa icon-tip" title="Tip"></i>
-</td>
-<td class="content">
-My first Python Tutorial, if you find an error or you have a suggestion to improve this documentation feel free
-to open an issue or clone <a href="https://github.com/angel-94/python-tutorials">this repository</a> and send me a Pull Request with
-your changes
-</td>
-</tr>
-</table>
+<div class="paragraph">
+<p>Python is an interpreted, object-oriented, high-level programming language with dynamic semantics. Its high-level built in data structures, combined with dynamic typing and dynamic binding, make it very attractive for Rapid Application Development, as well as for use as a scripting or glue language to connect existing components together. Python&#8217;s simple, easy to learn syntax emphasizes readability and therefore reduces the cost of program maintenance. Python supports modules and packages, which encourages program modularity and code reuse. The Python interpreter and the extensive standard library are available in source or binary form without charge for all major platforms, and can be freely distributed.</p>
 </div>
-<div class="hdlist">
-<table>
-<tr>
-<td class="hdlist1">
-<a href="python.html#python">Python</a> 
-</td>
-<td class="hdlist2">
-<p>What is Python?</p>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<a href="venv.html#venv">venv</a> 
-</td>
-<td class="hdlist2">
-<p>Steps to create a virtual environment</p>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<a href="pyscaffold.html#pyscaffold">Setup your project</a> 
-</td>
-<td class="hdlist2">
-<p>Setup a project with Pyscaffold</p>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<a href="poo.html#poo">POO</a> 
-</td>
-<td class="hdlist2">
-<p>POO with python</p>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<a href="flask.html#flask">Flask</a> 
-</td>
-<td class="hdlist2">
-<p>Expose your data with an API with Flask</p>
-</td>
-</tr>
-<tr>
-<td class="hdlist1">
-<a href="marshmallow.html#marshmallow">Marshmallow</a> 
-</td>
-<td class="hdlist2">
-<p>Serialize and Deserialize your objects</p>
-</td>
-</tr>
-</table>
+<div class="paragraph">
+<p>Often, programmers fall in love with Python because of the increased productivity it provides. Since there is no compilation step, the edit-test-debug cycle is incredibly fast. Debugging Python programs is easy: a bug or bad input will never cause a segmentation fault. Instead, when the interpreter discovers an error, it raises an exception. When the program doesn&#8217;t catch the exception, the interpreter prints a stack trace. A source level debugger allows inspection of local and global variables, evaluation of arbitrary expressions, setting breakpoints, stepping through the code a line at a time, and so on. The debugger is written in Python itself, testifying to Python&#8217;s introspective power. On the other hand, often the quickest way to debug a program is to add a few print statements to the source: the fast edit-test-debug cycle makes this simple approach very effective.</p>
+</div>
+<div class="paragraph">
+<p>Python is a programming language that lets you work quickly and integrate systems more effectivelys</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="pip"><a class="anchor" href="#pip"></a>2. PIP</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>Tool to install and manage Python packages</p>
 </div>
 </div>
 </div>
@@ -238,7 +197,7 @@ your changes
 <div id="footer">
 <div id="footer-text">
 Version 1.0.0<br>
-Last updated 2020-11-30 18:12:28 -0600
+Last updated 2020-11-22 00:34:44 -0600
 </div>
 </div>
 <link rel="stylesheet" href="assets/js/highlight/styles/googlecode.min.css">
